--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -7,12 +7,13 @@
 
 .timer{
     /* font-size: xxx-large; */
-    font-size: 60px;
-    font-weight: 600;
-    background-color: aliceblue;
-    color: black;
-    text-align: center;
-    padding: 0;
+    font-size: 90px;
+    font-weight: 500;
+    background-color: rgba(255, 255, 255, 0.201);
+    /* color: black; */
+    /* text-align: center; */
+    padding: 0px;
+
 }
 
 .participants{
