--- a/src/css/wireframe.css
+++ b/src/css/wireframe.css
@@ -19,7 +19,7 @@ body {
     margin-top: 5px;
     margin-left: 5px;
  }
- .bottom_block{
+ .bottom_block_margin{
     margin-top: 2.5px;
     margin-left: 5px;
  }
@@ -48,51 +48,69 @@ body {
     /* font-size: x-large; */
     width: 15vw;
     height: calc(55vh - 7.5px);
-    padding: 10px;
+    /* padding: 10px; */
     box-sizing: border-box; 
 }
 
 .general{
-    background-color: rgb(0, 74, 74);
+    /* background-color: rgb(230, 230, 230); */
+    background-color: rgb(56, 56, 56);
+    /* background-color: #481190; */
     color: seashell;
-    /* font-size: x-large; */
-    width: 85vw;
+    /* width: 85vw; */
+    width: calc(100vw - 10px);
     height: calc(55vh - 7.5px);
     padding: 10px;
     box-sizing: border-box; 
     display: flex;
+    border-radius: 15px;
 }
 
 .my_info{
-    background-color: rgb(72, 17, 144);
+    background-color: #481190;
     color: #fff5ee;
     /* font-size: x-large; */
     height: calc(45vh - 7.5px);
-    width: calc(100vw * 2/3);
+    /* width: calc(100vw * 2/3); */
+    width: 100vw;
     display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
 }
 
-.opponent{
-    background-color: rgb(135, 53, 15);
-    color: #fff5ee;
-    /* font-size: x-large; */
-    height: 50vh;
-    width: calc(100vw * 1/3);
-    height: calc(45vh - 7.5px);
-    padding: 10px;
-    box-sizing: border-box; 
+.im_posi{
+    background-color: #C1272D;
+}
+
+.im_neg{
+    background-color: #0071BC;
 }
 
 .my_left_info{
-    background-color: rgb(79, 79, 79);
-    width: 65%;
+    /* background-color: rgb(79, 79, 79); */
+    /* width: 65%; */
+    width: 40vw;
     padding: 10px;
     box-sizing: border-box; 
 }
 
 .my_right_info{
-    background-color: rgb(92, 5, 5);
-    width: 35%;
+    /* background-color: rgb(92, 5, 5); */
+    width: 45vh;
     padding: 10px;
     box-sizing: border-box; 
+}
+
+.message{
+    background-color: rgba(255, 255, 255, 0.213);
+    color: #fff5ee;
+    /* font-size: x-large; */
+    height: 50vh;
+    /* width: calc(100vw * 1/3); */
+    /* width: 100%; */
+    width: calc(60vw - 45vh - 20px);
+    height: calc(45vh - 12.5px);
+    padding: 10px;
+    box-sizing: border-box; 
+    border-radius: 15px;
 }
